@@ -208,18 +208,7 @@ AC_CHECK_FUNCS(sethostent   gethostent   endhostent   dnl
 
 dnl </GNU-WIN32 hacks>
 
-AC_CACHE_CHECK([for restartable system calls], scm_cv_restarts,
-	if test $ac_cv_func_sigaction = yes; then
-		[AC_TRY_COMPILE([#include <signal.h>],
-				[int a = SA_RESTART],
-				scm_cv_restarts=yes,
-				scm_cv_restarts=no)]
-	else
-		scm_cv_restarts=no
-	fi)
-if test $scm_cv_restarts = yes; then
-	AC_DEFINE(HAVE_RESTARTS)
-fi
+AC_SYS_RESTARTABLE_SYSCALLS
 
 if test "$ac_cv_header_regex_h" = yes ||
    test "$ac_cv_header_rxposix_h" = yes ||
